fix: cell text align between normal and edit mode

--- a/packages/sheets-ui/src/views/editor-container/index.module.less
+++ b/packages/sheets-ui/src/views/editor-container/index.module.less
@@ -22,5 +22,11 @@
         height: 100%;
 
         background: white;
+
+        canvas {
+            position: absolute;
+            top: -1px !important;
+            left: -1px !important;
+        }
     }
 }
